force-app/main/default/objects/Trigger_By_Pass_Setting__mdt/Trigger_By_Pass_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Trigger By Pass Setting</label>
    <pluralLabel>Trigger By Pass Settings</pluralLabel>
</CustomObject>