force-app/main/default/objects/Trigger_By_Pass_Setting__mdt/fields/Trigger_Setting__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Setting__c</fullName>
    <label>Trigger Setting</label>
    <referenceTo>Trigger_Setting__mdt</referenceTo>
    <relationshipLabel>Trigger By Pass Settings</relationshipLabel>
    <relationshipName>Trigger_By_Pass_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>