force-app/main/default/objects/Trigger_By_Pass_Setting__mdt/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>UserId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>